--- a/ba_vega_lite/src/components/chart/Chart.css
+++ b/ba_vega_lite/src/components/chart/Chart.css
@@ -1,6 +1,20 @@
+
 .chart {
+  /* 
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px;
+  margin: 100px;
+  */
+  display: block;
+  width: 100%;
+  overflow-x: auto;
+  padding: 32px 0;
+  box-sizing: border-box;
+}
+
+.chart > div, .chart > canvas, .chart > svg {
+  margin-left: 0;
+  margin-right: auto;
+  display: block;
 } 
