--- a/ba_vega_lite/src/components/footer/Footer.css
+++ b/ba_vega_lite/src/components/footer/Footer.css
@@ -4,4 +4,10 @@
   padding: 10px;
   position: fixed;
   bottom: 0;
+  background: var(--color-bg-panel);
+  color: var(--color-text);
+}
+body.dark-mode .footer {
+  background: var(--color-bg-panel-dark);
+  color: var(--color-text-dark);
 } 
