--- a/ba_vega_lite/src/components/footer/Footer.css
+++ b/ba_vega_lite/src/components/footer/Footer.css
@@ -7,7 +7,7 @@
   background: var(--color-bg-panel);
   color: var(--color-text);
 }
-body.dark-mode .footer {
+.App.dark-mode .footer {
   background: var(--color-bg-panel-dark);
   color: var(--color-text-dark);
 } 
