--- a/ba_vega_lite/src/components/JSONPage/JSONPage.css
+++ b/ba_vega_lite/src/components/JSONPage/JSONPage.css
@@ -1,7 +1,13 @@
+body.dark-mode .vega-jsonpage-card {
+  background: #181a1b !important;
+  border: none !important;
+}
+
 .vega-jsonpage-card {
   max-width: 100vw;
   margin: 2vw auto;
-  border: none;
+  border: none !important;
+  box-shadow: none !important;
 }
 
 body.dark-mode .vega-jsonpage-card {
